--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,6 +26,7 @@
     <li>• Responsive design for all devices</li>
     <li>• Easy integration with Angular routing</li>
     </ul>
+    <button (click)="goToProfile()">Profile....</button>
 </div>
 </section>
 
