--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,51 @@
- <!-- Navbar -->
-  <nav class="navbar navbar-expand-sm navbar-dark bg-primary fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">MyApp</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarNav" aria-controls="navbarNav"
-              aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/home">
-              Home
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/about">About</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" routerLink="/contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary fixed-top">
+  <div class="container">
+    <!-- Brand -->
+    <a class="navbar-brand" href="/">MyApp</a>
 
-  <!-- Main Content Area -->
+    <!-- Toggler (for mobile) -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar content -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <!-- Left menu -->
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact">Contact</a>
+        </li>
+      </ul>
+
+
+      <!-- Right side: Profile dropdown -->
+      <!-- <ul class="navbar-nav ms-auto">
+       <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="assets/profile.png" class="rounded-circle me-2" width="32" height="32" />
+            My Account
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" routerLink="/profile">Profile</a></li>
+            <li><a class="dropdown-item" routerLink="/login">Login</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" routerLink="/logout">Logout</a></li>
+          </ul>
+        </li>
+      </ul> -->
+      <ul class="navbar-nav ms-auto">
+         <!-- <li><a class="dropdown-item" [routerLink]="['/profile',{name:'monali'}]">Profile</a></li> -->
+         <li><a class="dropdown-item" [routerLink]="['/profile', 'monali']">Profile</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
