--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact">Contact</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link" routerLink="/basicf">form</a>
+        </li>
       </ul>
 
 
